--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    font-family: 'Poppins', sans-serif; text-align: justify;}
+    font-family: 'Poppins', sans-serif; text-align: justify;
+    margin: 0;}
 h1{
     font-size: 50px;}
 .name{
@@ -19,3 +20,5 @@ section{
         padding: 10px 40px;
         border-radius: 5px;
     }
+.background{background-image: url(blurred-web-backgrounds.jpg);
+background-repeat: no-repeat;}    
