--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ h1{
 .name{
     color:coral}
 section{
-    display: flex;}
+    display: flex;
+    margin-bottom: 100px;}
 .half-width{
     width: 50%; padding-left: 5%;
 }
@@ -22,3 +23,4 @@ section{
     }
 .background{background-image: url(blurred-web-backgrounds.jpg);
 background-repeat: no-repeat;}    
+.Developer{ background-image: url(blurred-web-backgrounds.jpg);}
