--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@ body{
     margin: 0;}
 h1{
     font-size: 50px;}
+    h2{font-size: 40px;}
+.Experiences{padding-left: 40px;
+    background-image: url(blurred-web-backgrounds.jpg);}
 .name{
     color:coral}
-section{
+.Flexible{
     display: flex;
-    margin-bottom: 100px;}
+    margin-bottom: 100px;
+    }
 .half-width{
     width: 50%; padding-left: 5%;
 }
@@ -24,3 +28,23 @@ section{
 .background{background-image: url(blurred-web-backgrounds.jpg);
 background-repeat: no-repeat;}    
 .Developer{ background-image: url(blurred-web-backgrounds.jpg);}
+.shadow{box-shadow: 10px 20px 40px gray;
+width: 40%;
+margin-left: 5%;
+margin-right: 5%;
+padding-left: 20px;
+border-radius: 5px;}
+.color{color:coral}
+#border-one{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#border-two{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange, tomato);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+}
